Add order checkout phase
